ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  creationTimestamp: null
#  annotations:
 #   nginx.ingress.kubernetes.io/rewrite-target: /
  name: explorecalifornia.com
spec:
#  ingressClassName: nginx
  rules:
  - host: explorecalifornia.com
    http:
      paths:
      - backend:
          service:
            name: explorecalifornia-svc
            port:
              number: 80
        path: /
        pathType: Prefix
#status:
 # loadBalancer: {}
